# Practice9

./: .gitignore  README.md  SplitStr.py  dMsgOut.txt  example.py  index.html  main.js  main.py  mySQLConnect.py  style.css  Полученное сообщение.txt
Map Russia/: style.css
Server/: CMakeLists.txt  Funcs.h  main.cpp  temp.txt
TelegramPostParser/: AllPostParser.py  Funcs.py  MsgOutAllPosts.txt  MsgOutNewPosts.txt  SplitStr.py  dMsgOut.txt  main.py  mySQLConnect.py  result.txt  result1.txt  retest.py  test.py  test1.py  Не проходит.txt  Полученное сообщение.txt
site/: index.html  main.js  style.css
